--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ a {
   display: grid;
   grid-template-areas:
     "head head head head head"
+    "head head head head head"
     "nav content content content content"
     "nav content content content content"
   ;
