--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family:  'Heebo', sans-serif;
   color: inherit;
+}
+
+body {
+  margin: 0;
 }
 
 li {
@@ -12,78 +16,62 @@ a {
   text-decoration: none;
 }
 
-.container {
+/* .container {
   display: grid;
-  grid-template-areas:
-    "head head head head head"
-    "head head head head head"
-    "nav content content content content"
-    "nav content content content content"
-  ;
-}
+} */
 
 header {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  font-size: 1em;
-  color: white;
-  background: #7349c1;
-  grid-area: head;
-}
-
-/* Why is header element not working in grid */
-header ul {
-  display: inline-flex;
-}
-
-header li {
-  padding: .5em;
-}
-header h1 {
-  margin: 1.4em 1em;
-  flex-grow: 1;
-}
-
-header .bell {
-  margin-top: 1em;
-  padding: 1em;
+  background-color:  rgba(84, 84, 87, 0.75);
+  width: 100%;
+  justify-content: space-between;
+  box-shadow:  0 4px 2px -2px gray;
 }
 
 header .avatar {
+  height: 5em;
   border-radius: 50%;
-  padding: 1em;
-  height: 25vh;
-  width: 25vh;
+
 }
 
-header p {
-  font-size: 1em;
-  text-align: right;
-  align-self: center;
-  padding: .6em .5em;
-  margin-top: 2em;
+header h1 {
+  color: white;
+  margin: 1em;
+}
+
+.your-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  color: white;
+  vertical-align: middle;
+}
+
+.your-info div {
+  margin: .5em;
+}
+
+.your-info .img{
   margin-right: 1em;
 }
 
-/* Alert */
-.alert {
-  margin-top: 1em;
-  margin-left: .5em;
-  background: rgb(63, 191, 191);
-  color: #fff;
-  border-radius: 5px;
-  padding: 1em;
-  width: 100%;
+.your-info h2{
   text-align: center;
+}
+
+.container {
+  display: flex; 
+  justify-content: space-evenly;
 }
 /* Navigation items */
 
 .nav {
-  background: #54368c;
+  background:rgba(84, 84, 87, 0.75);
   padding-right: 1.5em;
+  width: 12%;
   display: flex;
   flex-direction: column;
-  grid-area: nav;
 }
 
 .icon {
@@ -91,9 +79,9 @@ header p {
   margin: .5em .5em .5em 0;
 }
 .dashboardTab {
-  grid-area: content;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+  width: 88%;
+  margin: 1em;
+  padding:1em;
 }
 
 .dashboardTab h1 {
@@ -126,7 +114,7 @@ header p {
 
 .socialCard ul {
   display: inline-flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -136,17 +124,13 @@ header p {
   flex-wrap: wrap;
   margin: 5em 5em 5em 1em;
   padding: 2em 2em 1em 2em;
-  border-radius: 10px;
-  border: #b6aec4 2px solid;
+  border-radius: 8px;
+  border: #8a8f96 2px solid;
 }
 
-.socialCard .icon {
-  height: 56.693px;
-  width: 56.693px;
-  background:#7349c1;
-  border-radius: 50%;
-  padding: 1em;
-  float: left;
+
+.socialIcon {
+  fill: #53565a
 }
 
 .socialCard li p {
@@ -346,7 +330,7 @@ select {
 }
 
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
 
   header h1 {
     margin: 1.4em 1em;
@@ -469,9 +453,9 @@ select {
 
 
 
-}
+} */
 
-@media (min-width: 1024px){
+/* @media (min-width: 1024px){
   header {
     display: inline-flex;
   }
@@ -570,4 +554,4 @@ select {
     margin: 1em 1em 0 1em;
     padding: .8em;
   }
-}
+} */
